--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "casparcg-connection": "^4.1.0",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "nconf": "^0.10.0",
-    "node-osc": "^2.1.0",
-    "osc": "https://github.com/Julusian/osc.js",
+    "osc": "^2.3.1",
     "ws": "^1.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^2.0.1"
   },
   "pkg": {
     "assets": [
