--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "casparcg-bitc",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
-  "main": "index.js",
+  "bin": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "pkg -t node12-win-x64 --output ../caspar-bitc.exe index.js"
+    "build": "pkg -t node12-win-x64 --output ../caspar-bitc.exe ."
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "nconf": "^0.10.0",
     "osc": "^2.4.0",
+    "tslib": "^1.13.0",
     "ws": "^1.1.1"
   },
   "devDependencies": {
